--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,8 +107,6 @@
         -Gilla inlägg\n\t
     </string>
 
-    <string name="nummer">#</string>
-    <string name="loggain">Logga in</string>
     <string name="svara_med_inlagg">Svara med inlägg</string>
     <string name="svara_privat">Svara privat</string>
     <string name="svara_via_hemlis">via hemlis</string>
@@ -134,4 +132,16 @@
     <string name="lurpassa">Lurpassa</string>
     <string name="hetsa">Hetsa</string>
     <string name="missingConnection">Uppkoppling saknas!</string>
+    <string name="title_activity_login">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_username">Username</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_username">This username is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+
 </resources>
