Add home address to members

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -155,6 +155,7 @@
     <string name="ring">Ring</string>
     <string name="smsa">Smsa</string>
     <string name="maila">Maila</string>
+    <string name="address">Address</string>
     <string name="title_activity_maps">Map</string>
 
     <!-- Strings used in filtering messages -->
