Add and delete S and P

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,4 +163,5 @@
     <string name="filtrera_konversation">Filtrera konversation</string>
     <string name="filter_conversation_toast">"Filtrerar konversation mellan: "</string>
     <string name="cl_appen_clac">CL appen CLac</string>
+    <string name="tabort">Ta bort</string>
 </resources>
